--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -3,8 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#000"
-    >
+    android:background="#000">
 
     <ImageView
         android:layout_width="40dp"
@@ -20,6 +19,5 @@
         android:layout_gravity="center"
         android:gravity="bottom"
         android:textColor="#fff"/>
-
 
 </android.support.v7.widget.Toolbar>
